# AI-Assisted-Intake-Summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
in/: inputs.txt
intake_summarizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: ambiguous_free_text.txt  emergency_chest_pain.txt  emergency_neuro.txt  index.json  routine_followup.txt  routine_med_refill.txt  self_care_allergies.txt  telehealth_upper_respiratory.txt  telehealth_uri.txt  urgent_abdominal_pain.txt  urgent_neuro_symptoms.txt
spec/: summarizer_spec.md
src/intake_summarizer/: api.py  app.py  cli.py  flow.py  llm_client.py  persist.py  persist_failures.py  results.py  schema.py  settings.py  summarize.py  validate.py
src/intake_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: base.html  index.html  result.html
tests/: conftest.py  test_openai_integration.py  test_schema_validation.py  test_summarize_deterministic.py  test_triage_category.py
